# parser-example

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh
.github/workflows/: build.yml
cmake/: CompileOptions.cmake
cmake/antlr4/: ExternalAntlr4Cpp.cmake
src/: CMakeLists.txt
src/grammar/: CMakeLists.txt  Json.g4  JsonLexer.g4
src/json-parser/: CMakeLists.txt
src/json-parser/json-parser/: main.cpp
src/libjson/: CMakeLists.txt
src/libjson/libjson/: dump_tokens.cpp  dump_tokens.hpp  parser.cpp  parser.hpp
src/libjson/libjson/ast/: Ast.cpp  Ast.hpp  Visitor.hpp  XmlSerializer.cpp  XmlSerializer.hpp
src/libjson/libjson/ast/detail/: Builder.cpp  Builder.hpp
src/libjson/test/: lexer.cpp  parser.cpp
